--- a/src/styles/utilities/_borders.scss
+++ b/src/styles/utilities/_borders.scss
@@ -12,93 +12,98 @@
 // Core Border Mixins - improved to include style and color by default
 @mixin border($val) { 
   $val: if($val == 0, $val, $val + px); 
-  
-  border-width: $val; 
-  @if $val != 0 {
-    border-style: solid; // Apply solid style by default when width > 0
-    border-color: var(--border, var(--border)); // Apply default color
+  & {
+    border-width: $val; 
+    @if $val != 0 {
+        border-style: solid; // Apply solid style by default when width > 0
+        border-color: var(--border, var(--border)); // Apply default color
+      }
   }
 }
 
 @mixin border-top($val) { 
   $val: if($val == 0, $val, $val + px); 
-  
-  border-top-width: $val; 
-  @if $val != 0 {
-    border-top-style: solid;
-    border-top-color: var(--border, var(--border));
+  & {
+    border-top-width: $val; 
+    @if $val != 0 {
+      border-top-style: solid;
+      border-top-color: var(--border, var(--border));
+    }
   }
 }
 
 @mixin border-right($val) { 
   $val: if($val == 0, $val, $val + px); 
-  
-  border-right-width: $val; 
-  @if $val != 0 {
-    border-right-style: solid;
-    border-right-color: var(--border, var(--border));
+  & {
+    border-right-width: $val; 
+    @if $val != 0 {
+      border-right-style: solid;
+      border-right-color: var(--border, var(--border));
+    }
   }
 }
 
 @mixin border-bottom($val) { 
   $val: if($val == 0, $val, $val + px); 
-  
-  border-bottom-width: $val; 
-  @if $val != 0 {
-    border-bottom-style: solid;
-    border-bottom-color: var(--border, var(--border));
+  & {
+    border-bottom-width: $val; 
+    @if $val != 0 {
+      border-bottom-style: solid;
+      border-bottom-color: var(--border, var(--border));
+    }
   }
 }
 
 @mixin border-left($val) { 
   $val: if($val == 0, $val, $val + px); 
-
-  border-left-width: $val; 
-  @if $val != 0 {
-    border-left-style: solid;
-    border-left-color: var(--border, var(--border));
+  & { 
+    border-left-width: $val; 
+    @if $val != 0 {
+      border-left-style: solid;
+      border-left-color: var(--border, var(--border));
+    }
   }
 }
-
+ 
 // Border Radius Mixins
 @mixin rounded($val: map.get($border-radii, 'md')) { 
-  border-radius: $val; 
+  & {border-radius: $val; }
 }
 
 @mixin rounded-t($val) { 
-  border-top-left-radius: $val;
-  border-top-right-radius: $val;
+  & {border-top-left-radius: $val;}
+  & {border-top-right-radius: $val;}
 }
 
 @mixin rounded-r($val) { 
-  border-top-right-radius: $val;
-  border-bottom-right-radius: $val;
+  & {border-top-right-radius: $val;}
+  & {border-bottom-right-radius: $val;}
 }
 
 @mixin rounded-b($val) { 
-  border-bottom-left-radius: $val;
-  border-bottom-right-radius: $val;
+  & {border-bottom-left-radius: $val;}
+  & {border-bottom-right-radius: $val;}
 }
 
 @mixin rounded-l($val) { 
-  border-top-left-radius: $val;
-  border-bottom-left-radius: $val;
+  & {border-top-left-radius: $val;}
+  & {border-bottom-left-radius: $val;}
 }
 
-@mixin rounded-tl($val) { border-top-left-radius: $val; }
-@mixin rounded-tr($val) { border-top-right-radius: $val; }
-@mixin rounded-br($val) { border-bottom-right-radius: $val; }
-@mixin rounded-bl($val) { border-bottom-left-radius: $val; }
+@mixin rounded-tl($val) { & {border-top-left-radius: $val; }}
+@mixin rounded-tr($val) { & {border-top-right-radius: $val; }}
+@mixin rounded-br($val) { & {border-bottom-right-radius: $val; }}
+@mixin rounded-bl($val) { & {border-bottom-left-radius: $val; }}
 
 // Border Style and Color
-@mixin border-style($style) { border-style: $style; }
-@mixin border-color($color) { border-color: $color; }
+@mixin border-style($style) { & {border-style: $style; }}
+@mixin border-color($color) { & {border-color: $color; }}
 
 // Combined border properties
 @mixin border-all($width, $style, $color) {
-  border-width: $width;
-  border-style: $style;
-  border-color: $color;
+  & {border-width: $width;}
+  & {border-style: $style;}
+  & {border-color: $color;}
 }
 
 // -----------------------------------------------
