--- a/src/styles/abstracts/_config.scss
+++ b/src/styles/abstracts/_config.scss
@@ -116,42 +116,24 @@ $font-sizes: (
 
 // Updated spacing map
 $spacings: (
-  // 0rem
   0: 0,
-  // 0.25rem
-  1: rem(4),
-  // 0.5rem
-  2: rem(8),
-  // 0.75rem
-  3: rem(12),
-  // 1rem
-  4: rem(16),
-  // 1.25rem
-  5: rem(20),
-  // 1.5rem
-  6: rem(24),
-  // 2rem
-  8: rem(32),
-  // 2.5rem
-  10: rem(40),
-  // 3rem
-  12: rem(48),
-  // 4rem
-  16: rem(64),
-  // 5rem
-  20: rem(80),
-  // 6rem
-  24: rem(96),
-  // 8rem
-  32: rem(128),
-  // 10rem
-  40: rem(160),
-  // 12rem
-  48: rem(192),
-  // 14rem
-  56: rem(224),
-  // 16rem
-  64: rem(256)
-);
+  1: 0.25rem,    // 4px
+  2: 0.5rem,     // 8px
+  3: 0.75rem,    // 12px
+  4: 1rem,       // 16px
+  5: 1.25rem,    // 20px
+  6: 1.5rem,     // 24px
+  8: 2rem,       // 32px
+  10: 2.5rem,    // 40px
+  12: 3rem,      // 48px
+  16: 4rem,      // 64px
+  20: 5rem,      // 80px
+  24: 6rem,      // 96px
+  32: 8rem,      // 128px
+  40: 10rem, 
+  48: 12rem, 
+  56: 14rem, 
+  64: 16rem, 
+)  !default;
 
 $percentages: (0, 5, 10, 20, 25, 30, 40, 50, 60, 70, 75, 80, 90, 100) !default;
